--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
+$bg: #f089b0;
+$text-dark: #000;
+$text-gray: #757272;
+$btn-gradient: linear-gradient(
+  264deg,
+  rgba(240, 137, 176, 1) 0%,
+  rgba(230, 110, 208, 1) 100%
+);
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Poppins', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
+  background-color: $bg;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 90%;
+  background-color: #fff;
+  border-radius: 8px;
+  max-width: 400px;
+  padding: 30px 30px;
+
+  & h3 {
+    margin-bottom: 30px;
+    font-size: 24px;
+    font-weight: normal;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.person {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+
+  & figure {
+    width: 75px;
+    height: 75px;
+    margin-right: 30px;
+
+    & img {
+      width: 75px;
+      height: 75px;
+      display: block;
+      border-radius: 50%;
+      object-fit: cover;
+    }
   }
-  to {
-    transform: rotate(360deg);
+
+  & div {
+    & span {
+      display: block;
+    }
+
+    & span:first-child {
+      font-weight: 500;
+    }
+
+    & span:nth-child(2) {
+      color: $text-gray;
+    }
   }
+}
+
+.btn {
+  display: block;
+  width: 100%;
+  border-color: transparent;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+  outline: 1px solid rgba(242, 138, 178, 0.8);
+  cursor: pointer;
+  background: $btn-gradient;
+  border-radius: 4px;
+  color: #fff;
 }
